<resources>
    <string name="app_name">BodyEnd</string>
    <string name="activity_info">기본 정보</string>
    <string name="activity_target">목표 설정</string>


    <string name="info_1_name">이름 : </string>
    <string name="info_2_sex">성별 : </string>
    <string name="info_3_height">키 : </string>
    <string name="info_4_curr_height">현재 몸무게 : </string>
    <string name="info_5_target_height">목표 몸무게 : </string>

    <string name="target_1_date">목표 날짜 : </string>
    <string name="target_2_words">목표 한마디 : </string>
    <string name="target_3_picture">다이어트 자극 사진 : </string>

    <string name="stimulus_word">목표 :</string>
    <string name="stimulus_dday">D -</string>

    <string name="record_water">물 기록</string>
    <string name="record_exercise">운동 기록</string>
    <string name="record_weight">체중 기록</string>
    <string name="record_meal">식사 기록</string>
    <string name="record_picture">사진 기록</string>

    <string name="record_water_setting">물 기록 설정</string>
    <string name="record_exercise_setting">운동 기록 설정</string>
    <string name="record_weight_setting">체중 기록 설정</string>
    <string name="record_meal_setting">식사 기록 설정</string>
    <string name="record_picture_setting">사진 기록 설정</string>

    <string name="water_goal_volume">하루 물 섭취 권장량</string>
    <string name="water_alarm_setting">물 알람 설정</string>
    <string name="water_alarm_period">알람 주기</string>
    <string name="water_alarm_time">알람 시간대</string>

    <string name="daum_api_key">7069807109219170938</string>
    <string name="youtube_api_key">AIzaSyCqV5R5Y-GomfgzWaq7npppR-7X4p3kSlU</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="google_app_id">bodyend-1268</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
